examples/failing/f004-types-64bit.sq
{
    var x: u64;
    x = 18446744073709551616;
}